# whispy

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: exploration_ha_watchdog.md
tests/: test_backend.py  test_cache.py  test_cloud_client.py  test_device.py
whispy/: __init__.py  __main__.py  backend.py  backend_runner.py  broker.py  cli.py  cloud_client.py  collect.py  core.py  device.py  fl.py  load.py  mqtt.py  pipeline.py  train.py  vis.py  watchdog.py
